package ar.edu.utn.frba.dds.validacion;

public interface EstrategiaValidacion {
  public abstract boolean validar(String cadena);
}
